# zenspa-platform

./: .gitignore  pr-description.md
backend/: .env.example  .gitignore  QUICKSTART.md  README.md  REFACTORING.md  alembic.ini  log.txt  pyproject.toml  requirements.txt
backend/alembic/: README  README.md  env.py
backend/alembic/versions/: 001_create_auth_tables.py  28a1d79bdb7c_remove_role_column_from_profiles_table_final.py  348557d9877a_remove_role_column_from_profiles_table.py  4888e05a05a0_add_user_role_links_table.py  4babbad3802b_use_timestamptz_with_onupdate_for_.py  7648201de16f_add_profiles_table.py  828137a176a6_refactor_schema.py  8c6999f237ca_add_role_column_back_to_profiles_table_.py  f0e4886da080_refactor_user_role_link_pk_definition.py  f36b0e9c409f_add_user_role_links_table.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  api_v1.py  health.py  router.py  users.py
backend/app/common/: __init__.py  schemas.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: admin_models.py  admin_routes.py  admin_schemas.py  admin_service.py
backend/app/modules/auth/: __init__.py  auth-models.py  auth_models.py  auth_routes.py  auth_schemas.py  auth_service.py  webhook.py
backend/app/redis/: __init__.py  client.py  helpers.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_auth.py  test_config.py  test_database.py  test_exceptions.py  test_redis.py  test_user.py
(+198 files in other folders)
